# MSV-G6

./: .merge_file_YX42a2
arduino/: arduino.ino  arduino__just_sensors.cpp  car_control.ino  car_control_BASE_5391.ino  sensors.ino
arduino/car_control/: car_control.ino
arduino/sensors/: sensors.ino
code/: CMakeLists.txt
code/boxparker/: CMakeLists.txt
code/boxparker/boxparker/: CMakeLists.txt
code/lanedetector/: CMakeLists.txt
code/lanedetector/lanedetector/: CMakeLists.txt
code/lanefollower/: CMakeLists.txt
code/lanefollower/include/: LaneFollower.h
code/lanefollower/lanefollower/: CMakeLists.txt
code/lanefollower/src/: LaneFollower.cpp
code/lanefollower/testsuites/: LaneFollowerTestSuite.h
code/overtaker/: CMakeLists.txt
code/overtaker/overtaker/: CMakeLists.txt
code/overtaker/src/: Overtaker.cpp
code/overtaker/testsuites/: OvertakerTestSuite.h  OvertakerTestSuite.runner.cpp
code/overtakerSimulation/: CMakeLists.txt
code/overtakerSimulation/src/: OvertakeSim.cpp
code/proxy/: CMakeLists.txt
code/proxy/apps/: ardu-proxy.cpp
code/proxy/include/: ArduProxy.h  Proxy.h  SerialReceiveBytes.h
code/proxy/src/: ArduProxy.cpp  Proxy.cpp  SerialReceiveBytes.hpp
code/proxy/testsuites/: ProxyTestSuite.h
code/sidewaysparker/: CMakeLists.txt
code/sidewaysparker/src/: SidewaysParker.cpp
docker/: Dockerfile.template  Dockerfile.template.nonDev  configuration  pcBuildComplete.sh  pcBuildIncremental.sh  piBuildComplete.sh  piBuildIncremental.sh
docker/runPc/: docker-compose.yaml
docker/runRp/: Dockerfile  docker-compose.yaml
group-configs/configurations/: README.md
group-configs/configurations/sidewaysparking-sim/: configuration
group-configs/scripts/: ardu-proxy.sh  lanefollow.sh  odcockpit.sh  odsimcamera.sh  odsimirus.sh  odsimvehicle.sh  odsupercomponent.sh  proxy-camera.sh  proxy.sh  run-park-sim.sh  sidewaysparker.sh
group-configs/scripts.old/: readme.md
group-configs/scripts.old/sidewaysparker/: docker-compose.yaml
miniature/: CMakeLists.txt
miniature/lanefollower/src/: LaneFollower.cpp
resources/odvd/: ODVDScaledCarsDataModel.odvd
scripts/: configuration
usecases/lanefollower/Real/: .env  configuration  docker-compose.yaml
usecases/overtaking/: .env  docker-compose.yaml
usecases/player/: docker-compose.yml
(+13 files in other folders)
